# research-ledger

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-Hant.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  methodology_question.yml
.github/workflows/: test.yml
docs/: architecture.md  audit-bundle.md  dependency-policy.md  external-anchoring.md  key-management.md  migration.md  obsidian-workflow.md  publish-runbook.md  release-checklist.md  research-ledger-vs-git.md  scope-declaration.md  storage-policy.md  threat-model.md
docs/reviews/: 2026-06-03-gpt55-pro-review-triage.md  2026-06-04-agy-opus46-final-gate.md  2026-06-04-agy-opus46-pre-oss-review.md
examples/: disclosure-sample.md
examples/obsidian-vault/研究留痕範例/: 001-命題.md
src/research_ledger/: __init__.py  bundle.py  cli.py  crypto.py  disclosure.py  ledger.py
tests/: test_cli.py  test_crypto.py  test_disclosure.py  test_ledger.py  test_red_team_migration.py  test_red_team_security.py
