[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "research-ledger"
version = "0.1.0"
description = "Local-first tamper-evident ledger for AI-assisted research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Research Ledger Maintainers" }
]
dependencies = [
  "cryptography>=48.0.1",
  "pydantic>=2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
research-ledger = "research_ledger.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/research_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
